Failed file pushes

--- a/18._redis/python/basic_example/pyproject.toml
+++ b/18._redis/python/basic_example/pyproject.toml
@@ -2,13 +2,13 @@
 name = "basic-example"
 version = "0.1.0"
 description = ""
-authors = ["anderslatif <andl@kea.dk>"]
+authors = ["raskoeStud <rasm546d@stud.kea.dk>"]
 readme = "README.md"
 packages = [{include = "basic_example"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-redis = "^4.5.4"
+redis = "^4.5.5"
 
 
 [build-system]
