--- a/18._redis/python/pub-sub/pyproject.toml
+++ b/18._redis/python/pub-sub/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "pub_sub"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 redis = "^4.5.5"
+uvicorn = "^0.22.0"
 
 
 [build-system]
